--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ build-aux/compile linguist-vendored
 build-aux/depcomp linguist-vendored
 build-aux/install-sh linguist-vendored
 build-aux/missing linguist-vendored
+Makefile.in linguist-vendored
