--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-aclocal.m4 linguist-vendored
+aclocal.m4 linguist-generated
 build-aux/compile linguist-vendored
 build-aux/depcomp linguist-vendored
 build-aux/install-sh linguist-vendored
